--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "use-debounce": "^8.0.4"
   },
   "devDependencies": {
+    "@types/react": "18.0.28",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "prettier": "^2.7.1",
