--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "use-debounce": "^8.0.4"
   },
   "devDependencies": {
+    "@types/node": "^18.14.0",
     "@types/react": "18.0.28",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13"
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "typescript": "^4.9.5"
   }
 }
