--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,13 +22,17 @@
       "@/*": [
         "src/*"
       ]
-    }
+    },
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "src/components/Header.jsx", "src/components/NavLinks.jsx", "src/content/content.js"  ],
+    "**/*.tsx",
+    "src/components/Header.jsx",
+    "src/components/NavLinks.jsx",
+    "src/content/content.js"
+  ],
   "exclude": [
     "node_modules"
   ]
